--- a/configs/releng/syslinux/archiso_sys32.cfg
+++ b/configs/releng/syslinux/archiso_sys32.cfg
@@ -1,9 +1,9 @@
-LABEL arch32
-TEXT HELP
-Boot the Arch Linux (i686) live medium.
-It allows you to install Arch Linux or perform system maintenance.
-ENDTEXT
-MENU LABEL Boot Arch Linux (i686)
+LABEL Boot TheSlinux Graphic mode (i686)
 LINUX boot/i686/vmlinuz
 INITRD boot/i686/archiso.img
-APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL%
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.unit=graphical.target copytoram=y
+
+LABEL Boot TheSlinux Text mode (i686)
+LINUX boot/i686/vmlinuz
+INITRD boot/i686/archiso.img
+APPEND archisobasedir=%INSTALL_DIR% archisolabel=%ARCHISO_LABEL% systemd.unit=multi-user.target copytoram=y
